corpus/statement.txt
================================================================================
block
================================================================================

{}
{

}

--------------------------------------------------------------------------------

(source_file
  (block_statement)
  (block_statement))

================================================================================
assignment
================================================================================

a = 10
a, b = 10, 20
a^ = 10
a, b^ = 10, 20

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (identifier_list
      (identifier))
    (operator)
    (expression_list
      (int_literal)))
  (assignment_statement
    (identifier_list
      (identifier)
      (identifier))
    (operator)
    (expression_list
      (int_literal)
      (int_literal)))
  (assignment_statement
    (identifier_list
      (dereference_expression
        (identifier)
        (operator)))
    (operator)
    (expression_list
      (int_literal)))
  (assignment_statement
    (identifier_list
      (identifier)
      (dereference_expression
        (identifier)
        (operator)))
    (operator)
    (expression_list
      (int_literal)
      (int_literal))))

================================================================================
return statement
================================================================================

test :: proc() { return }
test :: proc() {
  return
}
test :: proc() {
  return 10
}
test :: proc() {
  return x * y
}

--------------------------------------------------------------------------------

(source_file
  (const_declaration
    (identifier_list
      (identifier))
    (operator)
    (operator)
    (expression_list
      (proc_definition
        (keyword)
        (parameters)
        (block_statement
          (return_statement
            (keyword))))))
  (const_declaration
    (identifier_list
      (identifier))
    (operator)
    (operator)
    (expression_list
      (proc_definition
        (keyword)
        (parameters)
        (block_statement
          (return_statement
            (keyword))))))
  (const_declaration
    (identifier_list
      (identifier))
    (operator)
    (operator)
    (expression_list
      (proc_definition
        (keyword)
        (parameters)
        (block_statement
          (return_statement
            (keyword)
            (expression_list
              (int_literal)))))))
  (const_declaration
    (identifier_list
      (identifier))
    (operator)
    (operator)
    (expression_list
      (proc_definition
        (keyword)
        (parameters)
        (block_statement
          (return_statement
            (keyword)
            (expression_list
              (binary_expression
                (identifier)
                (identifier)))))))))
